--- a/index.html
+++ b/index.html
@@ -2,14 +2,11 @@
 
 <body>
   <img id="pictureUrl">
-  <p id="userId">
-    <bzuserId:</b>
-  </p>
+  <p id="userId"><b>userId:</b></p>
   <p id="displayName"><b>displayName:</b></p>
   <p id="statusMessage"><b>statusMessage:</b> </p>
   <p id="decodedIDToken"><b>email:</b></p>
-  <scriptsrc="https://static.line-scdn.net/liff/edge/2/sdk.js">
-    </script>
+  <scriptsrc="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
     <script>
       async function getUserprofile() {
         const profile = await liff.getprofile()
