--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
+<!DOCTYPE html>
 <html>
-
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>LIFF - LINE Front-end Framework</title>
+  <style>
+    body { margin: 16px }
+    button, img { display: none; width: 40% }
+    button { padding: 16px }
+  </style>
+</head>
 <body>
+  <h1>Login LIFF</h1>
   <img id="pictureUrl">
   <p id="userId"><b>userId:</b></p>
   <p id="displayName"><b>displayName:</b></p>
