--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-  <h1>Login LIFF</h1>
+  <h1>LIFF Login </h1>
   <img id="pictureUrl">
   <p id="userId"><b>userId:</b></p>
   <p id="displayName"><b>displayName:</b></p>
