--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </style>
 </head>
 <body>
-  <h1>LIFจ้าF </h1>
-  <img id="pictureUrl" width="25%">
+  <h3>Welcome </h3>
+  <img id="pictureUrl" width="15%">
   <p id="userId"></p>
   <p id="displayName"></p>
   <p id="statusMessage"></p>
@@ -35,6 +35,7 @@
   </script>
 </body>
 </html>
+  
 <!-- <!DOCTYPE html>
 <html>
 <head>
