--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>My LIFF v2</title>
   <style>
     #pictureUrl { display: block; margin: 0 auto }
+    p{ display: block; margin: 0 auto }
   </style>
 </head>
 <body>
