--- a/index.html
+++ b/index.html
@@ -3,18 +3,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My LIFF v2</title>
-  <style>
-    #pictureUrl { display: block; margin: 0 auto }
-    p{ display: block; margin: 0 auto }
-  </style>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-  <h3>Welcome </h3>
+  <div class="container">
+        <div class="row justify-content-center align-items-center vh-100">
+            <div class="col-sm-8 col-md-6 col-lg-4 bg-white p-4 rounded shadow">
+                <div class="card text-center">
+                    <img id="pictureUrl" width="25%" class="card-img-top ">
+                    <div class="card-body">
+                        <h5 class="card-title"><id="displayName"></h5>
+                        <p class="card-text"><id="userId"></p>
+                          <p class="card-text"><id="statusMessage"></p>
+                            <p class="card-text"><id="getDecodedIDToken"></p>
+                        <a href="#" class="btn btn-primary">Log out</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+<!--   <h3>Welcome </h3>
   <img id="pictureUrl" width="25%">
   <p id="userId"></p>
   <p id="displayName"></p>
   <p id="statusMessage"></p>
-  <p id="getDecodedIDToken"></p>
+  <p id="getDecodedIDToken"></p> -->
   <script src="https://static.line-scdn.net/liff/edge/versions/2.9.0/sdk.js"></script>
   <script>
     function runApp() {
