--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
                 <div class="card text-center">
                     <img id="pictureUrl" width="25%" class="card-img-top ">
                     <div class="card-body">
-                        <h5 class="card-title"><id="displayName"></h5>
-                        <p class="card-text"><id="userId"></p>
-                          <p class="card-text"><id="statusMessage"></p>
-                            <p class="card-text"><id="getDecodedIDToken"></p>
+                       <p id="userId"></p>
+                        <p id="displayName"></p>
+                        <p id="statusMessage"></p>
+                        <p id="getDecodedIDToken"></p>
                         <a href="#" class="btn btn-primary">Log out</a>
                     </div>
                 </div>
