--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <title>My LIFF v2</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+  <style>
+        @import url('https://fonts.googleapis.com/css2?family=Prompt&display=swap');
+        *{
+            font-family: 'Prompt', sans-serif;
+        }
+        </style>
 </head>
 <body>
   <div class="container">
