--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <div class="row justify-content-center align-items-center vh-100">
             <div class="col-sm-8 col-md-6 col-lg-4 bg-white p-4 rounded shadow">
                 <div class="card text-center">
-                    <img id="pictureUrl" width="25%" class="card-img-top ">
+                    <img id="pictureUrl" width="20%" class="card-img-top ">
                     <div class="card-body">
                        <p id="userId"></p>
                         <p id="displayName"></p>
                         <p id="statusMessage"></p>
-                        <p id="getDecodedIDToken"></p>
+<!--                         <p id="getDecodedIDToken"></p> -->
                         <a href="#" class="btn btn-primary">Log out</a>
                     </div>
                 </div>
