--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <p id="displayName"></p>
                         <p id="statusMessage"></p>
                         <p id="getDecodedIDToken"></p>
-                        <button class="btn btn-primary" onclick="logout()">Log out</button>
+                        <button class="btn btn-primary" onclick="logOut()">Log out</button>
                     </div>
                 </div>
             </div>
