--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="row justify-content-center align-items-center vh-100">
             <div class="col-sm-8 col-md-6 col-lg-4 bg-white p-4 rounded shadow">
                 <div class="card text-center">
-                    <img id="pictureUrl" style="width:20%" class="card-img-top ">
+                    <img id="pictureUrl" class="card-img-top ">
                     <div class="card-body">
                        <p id="userId"></p>
                         <p id="displayName"></p>
