--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                        <p id="userId"></p>
                         <p id="displayName"></p>
                         <p id="statusMessage"></p>
-<!--                         <p id="getDecodedIDToken"></p> -->
+                        <p id="decodedIDToken"></p>
                         <button class="btn btn-primary" onclick="logOut()">Log out</button>
                     </div>
                 </div>
