--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       liff.logout()
       window.location.reload()
     }
-  function runApp() {
-      liff.getProfile().then(profile => {
+  async function runApp() {
+     awiat liff.getProfile().then(profile => {
         document.getElementById("pictureUrl").src = profile.pictureUrl;
         document.getElementById("userId").innerHTML = '<b>UserId:</b> ' + profile.userId;
         document.getElementById("displayName").innerHTML = '<b>DisplayName:</b> ' + profile.displayName;
