--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       window.location.reload()
     }
   async function runApp() {
-     awiat liff.getProfile().then(profile => {
+     await liff.getProfile().then(profile => {
         document.getElementById("pictureUrl").src = profile.pictureUrl;
         document.getElementById("userId").innerHTML = '<b>UserId:</b> ' + profile.userId;
         document.getElementById("displayName").innerHTML = '<b>DisplayName:</b> ' + profile.displayName;
