--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       window.location.reload()
     }
    function runApp() {
- async liff.getProfile().then(profile => {
+  liff.getProfile().then(async profile => {
         document.getElementById("pictureUrl").src = profile.pictureUrl;
         document.getElementById("userId").innerHTML = '<b>UserId:</b> ' + profile.userId;
         document.getElementById("displayName").innerHTML = '<b>DisplayName:</b> ' + profile.displayName;
